fixed favorites tab text-align.

--- a/style/main.css
+++ b/style/main.css
@@ -74,7 +74,7 @@ nav {
     display: none;
     position: fixed;
     z-index: 5;
-    width: 17%;
+    width: 15%;
     right: 0;
     top: 0;
     border-radius: 30px;
@@ -95,20 +95,28 @@ nav ul.primary-nav {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    letter-spacing: -0.016em;
+    letter-spacing: 0.016em;
     font-weight: 4em;
+    color: black;
+    text-decoration: underline;
+    display: block;
+    padding: .5em;
+    font-size: 1.3em;
+    float: right;
+    margin: auto ;
+    padding: auto;
     
 }
 
 nav li a {
     color: black;
-    text-decoration: none;
+    text-decoration: underline;
     display: block;
     padding: .5em;
-    font-size: 1.3em;
-    text-align: right;
-    margin: 0;
-    padding: 0;
+    font-size: 1em;
+    float: right;
+    margin: auto ;
+    padding: auto;
 }
 
 nav li a:hover {
@@ -130,12 +138,12 @@ nav.menu-btn {
 
 .home {
     color: black;
-    text-decoration: none;
+    text-overflow: clip;
     display: block;
     padding: .5em;
     font-size: 1.3em;
-    float: left;
-    margin: .5em;
+    float: inline-start;
+    margin: 0em;
     cursor: pointer;
     
 }
